# miniC-compiler

./: ._.gitignore  .clang-format  .errorlog  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  backendtest.ipynb  corner_case.md  fuck  main.cpp  makefile  out.ll  output  output.ll  runtime.ll  t()  test.ipynb  upload.sh
.github/workflows/: cmake-single-platform.yml
BackendTest/: Error.text  MTWS.py  Sched.buginfo  TestResult.txt  WithoutModify.S  a.out  fix.md  modify.s  modify_test.sh  out.ans.txt  qemu_test.sh  rebuild.sh  temp.s  temp.txt  tese_one.py  test  test.c  test.gcc.s  test.py  test.s  test.s.s  test.sh  test.sy  test.sy.ll  test.test  test_all.py  todo
Oldbackend/: AsmPrinter.cpp  InstSelection.cpp  gir.cpp
RISCVLib/: CacheLib.cpp  CacheLib.s  CacheLib4.cpp  CacheLib4.s  CacheLookUp.cpp  CacheLookUp.hpp  CacheLookUp.s  parallel_lib.cpp  parallel_lib.hpp  parallel_lib.s  sylib.c  sylib.s
back_end/: graph_draw.cpp  graph_draw.hpp
backend/: AsmPrinter.cpp  AsmPrinter.hpp  BackendDCE.cpp  BuildInFunctionTransform.cpp  CMakeLists.txt  CodeLayout.cpp  DeleteDeadBlock.cpp  FloatToDex.cpp  InstSelection.cpp  InstSelection.hpp  InstructionSelection.cpp  LLVM_IR.hpp  LegalizeConstInt.cpp  LegalizePass.cpp  LiveInfo.cpp  Liveness.cpp  LowerFomralArguments.cpp  MachineCode.cpp  MachineCode.hpp  Mcode.cpp  Mcode.hpp  Necromancer.cpp  New_LiveInfo.cpp  PeepHole.cpp  PhiElimination.cpp  PostRACalleeSavedLegalizer.cpp  RISCVAsmPrinter.cpp  RISCVContext.cpp  RISCVFrameContext.cpp  RISCVISel.cpp  RISCVLowering.cpp  RISCVMIR.cpp  RISCVMOperand.cpp  RISCVRegister.cpp  RISCVTrival.cpp  RegAlloc.cpp  RegAlloca.cpp  Sched.cpp  Scheduler.cpp  gir.cpp  (+7 more)
doc/: TODO  TODO.md  readme.md
flex/: lex.l
function_test/: ir_dump.ll  std  std.cpp  std.out  test  test.ast  test.c  test.c.ll  test.c.s  test.ll  test.myout  test.s  test.sy
function_test/fail test/: test1.c
include/Oldbackend/: AsmPrinter.hpp  InstSelection.hpp  gir.hpp
include/RISCVSupport/: cachelib.hpp  cachelib4.hpp  parallel.hpp
include/backend/: AsmPrinter.hpp  BackendDCE.hpp  BackendPass.hpp  BuildInFunctionTransform.hpp  CodeLayout.hpp  DeadCodeElimination.hpp  DeleteDeadBlock.hpp  FloatToDex.hpp  LegalizeConstInt.hpp  LegalizePass.hpp  Liveness.hpp  MachineCode.hpp  Mcode.hpp  Necromancer.hpp  PeepHole.hpp  PhiElimination.hpp  PostRACalleeSavedLegalizer.hpp  RISCVAsmPrinter.hpp  RISCVContext.hpp  RISCVFrameContext.hpp  RISCVISel.hpp  RISCVLowering.hpp  RISCVMIR.hpp  RISCVMOperand.hpp  RISCVRegister.hpp  RISCVTrival.hpp  RISCVType.hpp  RegAlloc.hpp  Sched.hpp  SchedInfo.hpp  Scheduler.hpp
include/lib/: AST_NODE.hpp  BaseCFG.hpp  CFG.hpp  List.hpp  MagicEnum.hpp  Singleton.hpp  SymbolTable.hpp  Trival.hpp  Type.hpp
include/yacc/: location.hh  parser.hpp  scanner.hpp
ir/: CMakeLists.txt  DealCriticalEdges.cpp
ir/Analysis/: AliasAnalysis.cpp  CMakeLists.txt  CondProbAnalysis.cpp  DealCriticalEdges.cpp  DealCriticalEdges.hpp  LivenessAnalysis.cpp  LoopInfo.cpp  SideEffect.cpp  dominant.cpp
ir/opt/: ._DCE.hpp  ADCE.cpp  ADCE.hpp  ArithOpt.cpp  BDCE.cpp  BDCE.hpp  BlockMerge.cpp  BranchRotate.cpp  CMakeLists.txt  CSE.cpp  CSE_NEW.cpp  CSE_New.cpp  CSE_New.hpp  CSE_Tmp.cpp  CacheLookUp.cpp  CodeMove.cpp  CondMerge.cpp  CondProp.cpp  ConstFolding.hpp  ConstantFold.cpp  ConstantFold.hpp  ConstantFolding.cpp  ConstantHoist.cpp  ConstantProp.cpp  ConstantProp.hpp  ControlFlowOpt.cpp  DCE.cpp  DCE.hpp  DSE.cpp  DeadArgsElimination.cpp  DeadCodeEliminate.cpp  DeadCodeEliminate.hpp  DeadStoreElimination.cpp  DealCriticalEdges.cpp  DirtyWork.cpp  EVA.cpp  GVN&GCM.cpp  GVN&GCM.hpp  GVN.cpp  GVN.hpp  (+58 more)
lib/: AST_NODE.cpp  AST_NODE.h  AST_NODE.hpp  BaseCFG.cpp  BaseCFG.hpp  CFG.cpp  CFG.hpp  CMakeLists.txt  List.hpp  MagicEnum.hpp  Singleton.cpp  Singleton.hpp  SymbolTable.h  SymbolTable.hpp  Trival.cpp  Type.cpp  Type.hpp  TypeTrans.cpp  TypeTrans.hpp  yytokentype.hpp
test_cases/: 00_arr_defn2.c  00_main.c  01_var_defn.c  02_var_defn2.c  03_arr_defn.c  03_var_defn2.c  04_const_defn.c  04_func_defn.c  05_add.c  05_const_array_defn.c  06_mod.c  06_var_defn_func.c  07_comment1.c  07_return_var.c  08_arr_assign.c  08_comment2.c  09_if.c  09_void_func.c  10_break.c  10_if_else.c  11_continue.c  11_while.c  12_array_traverse.c  12_getint.c  13_and.c  13_array_traverse2.c  14_or.c  15_array_test3.c  15_equal.c  16_greater_eq.c  16_nequal.c  17_less.c  17_less_eq.c  18_cal_prio.c  19_neg_expr.c  20_arr_sum.c  21_suminput.c  22_if_test1.c  23_if_test2.c  24_if_test3.c  (+71 more)
test_cases_output/: 00_arr_defn2.s  00_main.s  01_var_defn.s  02_arr_defn4.s  02_var_defn2.s  03_arr_defn.s  03_var_defn2.s  04_const_defn.s  04_func_defn.s  05_add.s  05_const_array_defn.s  06_mod.s  06_var_defn_func.s  07_comment1.s  07_return_var.s  08_arr_assign.s  08_comment2.s  09_if.s  09_void_func.s  10_break.s  10_if_else.s  11_continue.s  11_while.s  12_array_traverse.s  12_getint.s  13_and.s  13_array_traverse2.s  14_or.s  15_array_test3.s  15_equal.s  16_greater_eq.s  16_nequal.s  17_less.s  17_less_eq.s  18_cal_prio.s  19_neg_expr.s  20_arr_sum.s  21_suminput.s  22_if_test1.s  23_if_test2.s  (+73 more)
test_infrastructure/: CMakeLists.txt  TestWithArgs.py  constprop.py  frontend.py  inline.py  mem2reg.py
testcases/: 00_bitset1.sy  01_mm1.sy  03_sort2.sy
testcases/final_performance/: fft1.sy  gameoflife-gosper.in  gameoflife-p61glidergun.in  sl2.in
testcases/functional/: 01_var_defn2  02_var_defn3  03_arr_defn2  04_arr_defn3  05_arr_defn4  06_const_var_defn2  08_const_array_defn  09_func_defn  10_var_defn_func  11_add2  12_addc  13_sub2  14_subc  15_mul  16_mulc  17_div  18_divc  19_mod  20_rem  21_if_test2  22_if_test3  23_if_test4  24_if_test5  25_while_if  26_while_test1  29_break  (+73 more)
util/: Cmakelists.txt  HashScope.hpp  Scope.hpp  my_stl.hpp
wa/: 18_prim.sy.ll
yacc/: CMakeLists.txt  lex.l  make_front.sh  parser.cpp  parser.hpp  parser.y  scanner.cpp  scanner.hpp
(+431 files in other folders)
